--- a/views/add-products.ejs
+++ b/views/add-products.ejs
@@ -19,24 +19,26 @@
     <div class="card">
         <div class="container">
             <h1>Add product form</h1>
-            <form action="" class="add-product-form">
+            <form action="/admin/add-product" method="POST" class="add-product-form">
 				<div>
 					<label for="name">Book title</label>
-					<input type="text" id="name" placeholder="Enter the name of the book">
+					<input type="text" id="title" name="title" placeholder="Enter the name of the book">
 				</div>
 				<div>
 					<label for="imageUrl">Enter the imageUrl</label>
-					<input type="text" id="imageUrl" placeholder="Enter image url of the book">
+					<input type="text" id="imageUrl" name="imageUrl" placeholder="Enter image url of the book">
 				</div>
 				<div>
 					<label for="description">Add the description</label>
-					<textarea id="text" placeholder="Enter the description"></textarea>
+					<textarea id="description" name="description" placeholder="Enter the description"></textarea>
 				</div>
                 <div>
                     <label for="price">Add the price</label>
-                    <input id="float" placeholder="Enter the price">
+                    <input type="number" id="price" name="price" placeholder="Enter the price">
                 </div>
-				<input type="submit" value="Send product form" class="submit-btn">
+				<div>
+                    <button type="submit">Add Product</button>  
+                </div>
 			</form>
         </div>
     </div>
