--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -17,14 +17,23 @@
     </nav>
     <h1>Shop</h1>
     <ul>
-        <% products.forEach(product => { %>
-            <li>
-                <h2><%= product.title %></h2>
-                <img src="<%= product.imageUrl %>" alt="<%= product.title %>" />
-                <p><%= product.description %></p>
-                <p>Price: $<%= product.price %></p>
-            </li>  
-        <% }); %>     
+        <% if (products && products.length > 0) { %>
+            <% products.forEach(product => { %>
+                <li>
+                    <h2><%= product.title %></h2>
+                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>" />
+                    <p><%= product.description %></p>
+                    <p>Price: $<%= product.price %></p>
+                    <form action="/cart/add-to-cart" method="POST">
+                        <input type="hidden" name="productId" value="<%= product.id %>">
+                        <input type="number" name="quantity" value="1" min="1">
+                        <button type="submit">Add to Cart</button>
+                    </form>
+                </li>
+            <% }); %>
+        <% } else { %>
+            <p>No products available.</p>
+        <% } %>
     </ul>
 </body>
 </html>
